--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Quyen Nguyen"
-  avatar           : "download.png"
+  avatar           : "quyen_headshot.png"
   bio              : "University of Otago"
   location         : "New Zealand"
   employer         :
