--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,5 +11,8 @@ main:
     
   - title: "Working Papers"
     url: /workingpapers/
-        
+     
+  - title: "Presentations"
+    url: /talks/       
+
 
